Fixing signatures values, progress bar on tablets and side bar overlay

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -2736,6 +2736,8 @@ nav.navbar.navbar-default ul.dropdown-menu.cycle
       height: 14px
       width: 14px
       border-radius: 7px
+      left: 0px
+      top: 0px
 
     span:nth-child(2)
       height: 18px
