--- a/app/assets/stylesheets/petition.sass
+++ b/app/assets/stylesheets/petition.sass
@@ -51,8 +51,28 @@
   
   .petition-side-bar
     color: #fff
-    background-repeat: no-repeat
-    background-size: cover
+
+    &::after
+      content: ""
+      opacity: 0.6
+      background-color: #000
+      top: 0
+      left: 0
+      bottom: 0
+      right: 0
+      position: absolute
+      z-index: -1
+
+    &::before
+      content: ""
+      background-repeat: no-repeat
+      background-size: cover
+      top: 0
+      left: 0
+      bottom: 0
+      right: 0
+      position: absolute
+      z-index: -2
 
     .phone-bottom-info
       display: none
